fixed arrow z-index

--- a/assets/SASS/components/_carroussel.scss
+++ b/assets/SASS/components/_carroussel.scss
@@ -102,7 +102,7 @@
       position: absolute;
       width: 3.7%;
       height: 100%;
-      z-index: 1;
+      z-index: 100;
       @include flex (row);
       border-radius: 5px;
       cursor: pointer;
