--- a/assets/SASS/main.css
+++ b/assets/SASS/main.css
@@ -883,7 +883,7 @@ main {
   position: absolute;
   width: 3.7%;
   height: 100%;
-  z-index: 1;
+  z-index: 100;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
